<resources>
    <string name="app_name">VSU_lesson6</string>
    <string name="example1_text">Example1</string>
    <string name="example2_text">Example2</string>
    <string name="example3_text">Example3</string>
    <string name="example4_text">Example4 (Okhttp execute)</string>
    <string name="example5_text">Example5 (Okhttp enqueue)</string>
    <string name="example6_text">Example6 (Retrofit execute)</string>
    <string name="example7_text">Example7 (Retrofit enqueue)</string>
    <string name="example8_text">Example8 (Retrofit корутины)</string>
    <string name="example9_text">Example9 (Retrofit rxjava)</string>
    <string name="example10_text">Практика</string>
</resources>