<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/example1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example1_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/example2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example1_btn" />

    <Button
        android:id="@+id/example3_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example3_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example2_btn" />

    <Button
        android:id="@+id/example4_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example4_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example3_btn" />

    <Button
        android:id="@+id/example5_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example5_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example4_btn" />

    <Button
        android:id="@+id/example6_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example6_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example5_btn" />

    <Button
        android:id="@+id/example7_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example7_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example6_btn" />

    <Button
        android:id="@+id/example8_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example8_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example7_btn" />

    <Button
        android:id="@+id/example9_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example9_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example8_btn" />

    <Button
        android:id="@+id/example10_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example10_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example9_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>